fix: 后端编译修复 — 去重字段/恢复feature-backend版本/删重复Controller
- BehaviorRecordEntity: 删除重复的statusCode/statusLabel
- StudentEvaluationService: 恢复feature/backend增强版
- TrainingPlanService/Models: 恢复feature/backend版
- 删除重复的GoalRecordsController(Controller已有同端点)
- 运行migrate-v2.7-reporting-status.sql